Testing: Add detyails and fixes for color contrast test with webAim

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,9 +183,9 @@ main {
 }
 
 #ques-title {
-    background-color: #7898ac;
+    background-color: #524125;
     padding: 0.6em 1em;
-    color: #234372
+    color: #fff;
 }
 
 fieldset {
